--- a/ReadFASTQ/ReadFASTQ.csproj
+++ b/ReadFASTQ/ReadFASTQ.csproj
@@ -5,4 +5,8 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="morelinq" Version="3.1.1" />
+    </ItemGroup>
+
 </Project>
